# modality-otel-receiver

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
js-test-client/: main.js  package-lock.json  package.json  tracing.js
src/: auth.rs  config.rs  main.rs  opts.rs  otlp.rs
